[gd_scene load_steps=4 format=3 uid="uid://plrcraof4yq3"]

[ext_resource type="Script" path="res://scenes/projectiles/game_over.gd" id="1_u4c2f"]
[ext_resource type="PackedScene" uid="uid://7nemy80yhqt8" path="res://scenes/level.tscn" id="2_iqki7"]

[sub_resource type="Theme" id="Theme_uxphg"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_u4c2f")
level = ExtResource("2_iqki7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uxphg")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer_rows" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="title" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
uppercase = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="RestartButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "  Restart  "

[node name="QuitButton" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer_rows/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
